heading issue on small phones

--- a/src/styles/Blog.module.css
+++ b/src/styles/Blog.module.css
@@ -24,6 +24,11 @@
   justify-content: center;
   text-align: center;
 }
+.main header nav menu aside {
+  display: flex;
+  flex-wrap: nowrap;
+}
+
 .main footer button.contactButton {
   align-self: center;
 }
@@ -40,8 +45,6 @@
   padding: 0;
   margin-bottom: -12px;
 }
-.main header menu .socialBar,
-.main aside .socialBar,
 .main article.resume menu,
 .main footer menu,
 .main footer nav {
@@ -51,13 +54,9 @@
 }
 .main header menu a,
 .main article.resume menu a,
-.main aside .socialBar a,
 .main footer menu a {
   min-width: 48px;
   min-height: 48px;
-}
-.main .socialBar menu {
-  padding-top: 12px;
 }
 .main header .socialBar svg,
 .main article.resume menu svg,
@@ -72,10 +71,7 @@
   justify-content: center;
   width: 100%;
 }
-.main .content h2,
-.main .content p {
-  width: 400px;
-}
+
 .main .portfolioGrid img.scribe {
   object-fit: contain;
 }
@@ -221,10 +217,13 @@
 }
 /* LARGE Mobile to tablet */
 @media (max-width: 600px) {
-  .main header nav menu div nav,
+  .main header nav menu div nav {
+    justify-content: center;
+  }
   .main header nav menu aside {
     flex-wrap: wrap;
     justify-content: center;
+    padding-bottom: 2em;
   }
   .main footer div nav {
     flex-wrap: wrap;
@@ -232,7 +231,19 @@
     padding-right: 2em;
   }
 }
-
+@media (max-width: 500px) {
+  .main header nav menu div nav {
+    flex-wrap: wrap;
+  }
+}
+@media (max-width: 400px) {
+  .main .grid a img {
+    display: none;
+  }
+  .main .grid a aside {
+    padding: 8px;
+  }
+}
 @media (min-width: 400px) {
   .main header,
   .main article .inner {
@@ -277,6 +288,10 @@
     justify-content: space-between;
     flex-wrap: nowrap;
   }
+  .main .content h2,
+  .main .content p {
+    width: 400px;
+  }
   .main h2,
   .main p {
     padding-left: 0;
@@ -296,7 +311,10 @@
     padding: 1em;
   }
 }
-@media (min-width: 1100px) {
+@media (min-width: 1200px) {
+  .main header nav menu aside menu {
+    padding-top: 12px;
+  }
 }
 @media (max-width: 600px) {
 }
